# qop

./: .gitignore  Cargo.toml  neomake.yaml
docs/: README.md
docs/adrs/: 0001-rfc-compliant-wording.md  0002-feature-conditional-compilation.md  0003-subsystem-architecture.md  0004-error-handling-anyhow.md  0005-async-patterns.md  0006-configuration-management.md  0007-repository-service-pattern.md  0008-cli-command-pattern.md  0009-type-safety-patterns.md  0010-version-compatibility-validation.md  0011-migration-file-format.md  0012-migration-safety-modes.md  0013-history-management.md  0014-audit-logging-and-table-naming.md  0015-transactions-and-timeouts.md  0016-experimental-features-policy.md  0017-docs-and-completions.md  0018-output-formatting.md  0019-cli-diagnostics-and-exit-codes.md
docs/releases/v0.5/: notes.md
example/: qop.toml
example/id=1753238346067/: up.sql
example/id=1753240408157/: up.sql
example/id=1753279061221/: down.sql  up.sql
example/id=1753311846662/: up.sql
src/: args.rs  config.rs  config_init.rs  main.rs  migration_diff.rs  reference.rs
src/core/: migration.rs  mod.rs  repo.rs  service.rs
src/helpers/: migration.rs
src/subsystem/: driver.rs  mod.rs
src/subsystem/postgres/: commands.rs  config.rs  migration.rs  mod.rs  repo.rs
src/subsystem/sqlite/: commands.rs  config.rs  migration.rs  mod.rs  repo.rs
test/: qop.toml  test.db
test/id=1756625171456/: meta.toml  up.sql
