[package]
name = "qop"
version = "0.0.0"
authors = ["cchexcode <alexanderh.weber@outlook.com>"]
edition = "2024"
license = "MIT"
description = "A simple and powerful database migration tool."
homepage = "https://github.com/cchexcode/qop"
repository = "https://github.com/cchexcode/qop"
keywords = ["sql", "postgres", "sqlite", "cli", "database"]
categories = ["command-line-utilities", "database"]
readme = "docs/README.md"

[features]
default = ["postgres", "sqlite"]
postgres = []
sqlite = []

[dependencies]
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
async-trait = "0.1.83"
clap = "4.5.45"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
clap-markdown = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
bytes = "1.10.1"
crossterm = "0.29.0"
anyhow = "1.0.99"
signal-hook = "0.3.18"
parking_lot = "0.12.4"
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.9.5"
sqlx = { version = "0.8.6", features = ["tls-rustls", "runtime-tokio", "postgres", "sqlite", "chrono"]}
comfy-table = "7.1.4"
path-clean = "1.0.1"
pep440_rs = "0.7"
sqlparser = "0.58"

[dev-dependencies]
hoox = "0.3.0"
