[package]
name = "qop"
version = "0.0.0"
authors = ["cchexcode <alexanderh.weber@outlook.com>"]
edition = "2024"
license = "MIT"
description = "A simple and powerful database migration tool."
homepage = "https://github.com/cchexcode/qop"
repository = "https://github.com/cchexcode/qop"
keywords = ["sql", "postgres", "sqlite", "cli", "database"]
categories = ["command-line-utilities", "database"]
readme = "docs/README.md"

[features]
default = ["sub+sqlite"]
"sub+postgres" = ["sqlx/postgres"]
"sub+sqlite" = ["sqlx/sqlite"]

[dependencies]
tokio = { version = "1.47.1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "io-util",
    "time",
    "sync",
] }
async-trait = "0.1.89"
clap = "4.5.45"
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
clap-markdown = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
toml = "0.9.5"
sqlx = { version = "0.8.6", default-features = false, features = ["tls-rustls", "runtime-tokio", "chrono"]}
comfy-table = "7.1.4"
path-clean = "1.0.1"
pep440_rs = "0.7"
